Fixing spacing issues, removing commented out code, cleaning up code

--- a/themes/morphosource/css/morphosource.css
+++ b/themes/morphosource/css/morphosource.css
@@ -115,21 +115,6 @@ a.blueText:hover{
 	cursor:default;
 }
 
-/* Images (move later) */
-.entityFormatIcon{
-}
-
-.entityFormatIconInactive{
-	opacity: 0.5;
-}
-
-#listTileImg{
-	display: inline-block;
-	background-image:url('../graphics/morphosource/ic_view_module_white_48dp_1x.png');
-	width: 50px;
-	height: 50px;
-}
-
 /* Rules */
 .blueRule{
 	background-color:#003880;
@@ -190,22 +175,17 @@ a.blueText:hover{
 	border-top-right-radius: 5px;
 	-moz-border-top-right-radius: 5px; 
 	-webkit-border-top-right-radius: 5px;
-	/*text-shadow: 0 -1px 1px rgba(0,0,0,0.25);*/
 	position: relative;
 	cursor: pointer;font-family:'neuzeitrmn', Helvetica, sans-serif;
 	text-transform:uppercase;
 	font-weight:normal;
 	background-color:#fff;
-	/*background-color:#003880;*/
 	width: 200px;
 	height: 40px;
 	font-size:15px;
 	line-height:40px;
 	text-align: center;
 	box-shadow: 0 0px 3px #828282;
-	/*border-top: 1px solid #578686;
-	border-left: 1px solid #578686;
-	border-right: 1px solid #578686;*/
 	border-top: 1px solid #003880;
 	border-left: 1px solid #003880;
 	border-right: 1px solid #003880;
@@ -213,35 +193,12 @@ a.blueText:hover{
 }
 
 .tab:hover{
-	/*background-color:#507c7c;*/
 	background-color:#F7F7F7;
 }
 
 .tabActive, .tabActive:hover, .tabActive:visited {
-	/*color: #578686;*/
 	color: #fff;
 	background-color: #003880;
-}
-
-/* Will be moved later, but text decoration for entity view header */
-
-.entityViewHeaderText {
-	color: #fff !important;
-	text-decoration: none;
-	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
-	font-family:'neuzeitrmn', Helvetica, sans-serif;
-	text-transform:uppercase;
-	font-weight:normal;
-	font-size: 15px;
-	margin-right: 5px;
-}
-
-.entityGroupLabelText a {
-	/*color: #fff;*/
-}
-
-#mediaSortButton {
-	/*float: right;*/
 }
 
 /* Buttons */
@@ -311,6 +268,20 @@ a.blueText:hover{
 	font-size:11px;
 	line-height:15px;
 	border-radius: 15px;
+}
+
+.batchButton {
+	width: 70px;
+}
+
+.batchTopButton {
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-top: 2px;
+}
+
+.treeSortButtons {
+	margin-top: 15px;
 }
 
 #contentArea{
@@ -840,60 +811,26 @@ styles for original hp layout
 	margin-right: 10px;
 }
 
-.batchTopButton {
-	margin-left: 5px;
-	margin-right: 5px;
-	margin-top: 2px;
-}
-
-.treeSortButtons {
-	margin-top: 15px;
-}
-
-#entityBatchPaneContainer{
-	border: 1px solid #003880;
-	box-shadow: 0 0px 3px #828282;
-	padding: 10px;
-	/*height: 460px;*/
-}
-
-#entityBatchPaneContainer .formLabel {
-	font-weight: normal;
-	font-family: 'neuzeitlgt', sans-serif;
-	font-size: 13px;
-	margin-left: 5px;
-}
-
-#entityMediaBatchFormContainer {
-	height: 400px;
-}
-
-#batchColLeft {
-	float: left;
-	width: 415px;
-}
-
-#batchColRight {
-	float: right;
-	width: 415px;
-}
-
-#batchButtonContainer{
-	height: 60px;
-}
-
-.batchButton {
-	width: 70px;
-}
-
-#entityMediaBatchEditContainer {
-	margin-top: 15px;
-	margin-bottom: 15px;
-}
+/* entity view */
 
 #entityView {
 	margin-top: 15px;
 	margin-bottom: 15px;
+}
+
+.entityViewHeaderText {
+	color: #fff !important;
+	text-decoration: none;
+	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+	font-family:'neuzeitrmn', Helvetica, sans-serif;
+	text-transform:uppercase;
+	font-weight:normal;
+	font-size: 15px;
+	margin-right: 5px;
+}
+
+.entityFormatIconInactive{
+	opacity: 0.5;
 }
 
 .marginTop10Px {
@@ -965,21 +902,47 @@ styles for original hp layout
     height: 100%;
 }
 
-.entityGroupLabelB{
-	display: inline-block;
-	width: 200px;
-	height: 200px;
-	background-color: #C7D3E3;
-	border: 1px solid #689899;
-	border-radius: 5px;
-	-moz-border-radius: 5px; 
-	-webkit-border-radius: 5px;
-}
-
 .entityGroupLabelItem {
 	display: inline-block;
 	vertical-align: middle;
-	/*color: #fff;*/
+}
+
+/* entity view batch edit menu */
+
+#entityBatchPaneContainer{
+	border: 1px solid #003880;
+	box-shadow: 0 0px 3px #828282;
+	padding: 10px;
+}
+
+#entityBatchPaneContainer .formLabel {
+	font-weight: normal;
+	font-family: 'neuzeitlgt', sans-serif;
+	font-size: 13px;
+	margin-left: 5px;
+}
+
+#entityMediaBatchFormContainer {
+	height: 400px;
+}
+
+#batchColLeft {
+	float: left;
+	width: 415px;
+}
+
+#batchColRight {
+	float: right;
+	width: 415px;
+}
+
+#batchButtonContainer{
+	height: 60px;
+}
+
+#entityMediaBatchEditContainer {
+	margin-top: 15px;
+	margin-bottom: 15px;
 }
 
 #mediaListings .projectMedia a{
